--- a/Makefile.common
+++ b/Makefile.common
@@ -45,39 +45,55 @@ CFLAGS		+= -O2 -Wall -Wextra -Wno-unused-parameter \
 CFLAGS		+= -g
 CORE_CFLAGS	= -DAVR_CORE=1
 
+ifneq ("$(AVR_ROOT)","")
+ AVR 		:= ${AVR_ROOT}/bin/avr-
+else
+ AVR 		:= avr-
+endif
+
 ifeq (${shell uname}, Darwin)
  # gcc 4.2 from MacOS is really not up to scratch anymore
  CC			= clang
- AVR_ROOT 	:= "/Applications/Arduino.app/Contents/Java/hardware/tools/avr/"
- AVR 		:= ${AVR_ROOT}/bin/avr-
+ ifeq ("$(AVR_ROOT)","")
+   AVR_ROOT 	:= "/Applications/Arduino.app/Contents/Java/hardware/tools/avr/"
+   AVR 		:= ${AVR_ROOT}/bin/avr-
+ endif 
  # Thats for MacPorts libelf
  ifeq (${shell test -d /opt/local && echo Exists}, Exists)
   ifneq (${shell test -d /opt/local/avr && echo Exists}, Exists)
-   $(warning Please install avr-gcc: port install avr-gcc avr-libc)
+   ifeq ("$(wildcard $(AVR)gcc)","")
+     $(error Please install avr-gcc: port install avr-gcc avr-libc)
+   endif
   endif
   ifneq (${shell test -d /opt/local/include/libelf && echo Exists}, Exists)
-   $(warning Please install libelf: port install libelf)
+   $(error Please install libelf: port install libelf)
   endif
   CC		= clang
   IPATH		+= /opt/local/include /opt/local/include/libelf
   LFLAGS	= -L/opt/local/lib/
-  AVR 		:= /opt/local/bin/avr-
+  ifeq ("$(wildcard $(AVR)gcc)","")
+    AVR 		:= /opt/local/bin/avr-
+  endif
  else
   # That's for Homebrew libelf and avr-gcc support
   HOMEBREW_PREFIX ?= /usr/local
   ifeq (${shell test -d $(HOMEBREW_PREFIX)/Cellar && echo Exists}, Exists)
    ifneq (${shell test -d $(HOMEBREW_PREFIX)/Cellar/avr-gcc/ && echo Exists}, Exists)
-    $(warning Please install avr-gcc: brew tap osx-cross/homebrew-avr ; brew install avr-libc)
+     ifeq ("$(wildcard $(AVR)gcc)","")
+       $(error Please install avr-gcc: brew tap osx-cross/homebrew-avr ; brew install avr-libc)
+     endif
    endif
    ifneq (${shell test -d $(HOMEBREW_PREFIX)/Cellar/libelf/ && echo Exists}, Exists)
-    $(warning Please install libelf: brew install libelf)
+    $(error Please install libelf: brew install libelf)
    endif
    CC			= clang
    IPATH		+= $(HOMEBREW_PREFIX)/include
    LFLAGS		= -L$(HOMEBREW_PREFIX)/lib/
    CFLAGS		+= -I/$(HOMEBREW_PREFIX)/include/libelf
-   AVR_ROOT		:= $(firstword $(wildcard $(HOMEBREW_PREFIX)/Cellar/avr-libc/*/))
-   AVR			:= $(HOMEBREW_PREFIX)/bin/avr-
+   ifeq ("$(wildcard $(AVR)gcc)","")
+     AVR_ROOT		:= $(firstword $(wildcard $(HOMEBREW_PREFIX)/Cellar/avr-libc/*/))
+     AVR			:= $(HOMEBREW_PREFIX)/bin/avr-
+    endif
   endif
  endif
 else
