--- a/examples/board_simduino/Makefile
+++ b/examples/board_simduino/Makefile
@@ -25,6 +25,7 @@ IPATH = .
 IPATH += ../parts
 IPATH += ${simavr}/include
 IPATH += ${simavr}/simavr/sim
+IPATH += ${simavr}/simavr
 
 VPATH = .
 VPATH += ../parts
